# ChatJustus

./: .gitignore  .reviewignore  404.html  BJNR258700008_output.json  README.md  deploy.sh  first-contact.html  first-contact.txt  follow-up.html  follow-up.txt  index.html  index.txt  output.json  output.xml
backend/: .env.example  README.md  create_lawyer_db.ipynb  create_legal_db.ipynb  create_mocked_case.ipynb  environment.yaml  legal_db.ipynb  legal_db.py  pyproject.toml  qdrant.ipynb  test.ipynb  vector_db.ipynb
backend/backend/assistant/: README.md  chatgpt.py  first_contact.py  follow_up_qa.py  quickstart.ipynb  util.py  utils.py
backend/backend/data/: case_data.py
backend/backend/database/: README.md  __init__.py  database.ipynb  database.py  dialog.py  generate.py  legal_db.ipynb  schemas.py  utils.py  vector_db.py
backend/backend/database/core/: embedding.py  vector_db.py
backend/backend/server/: README.md  case_manager.py  mail.py  server.py  sync.py  synced_data.py  utils.py
backend/data/: BJNR005330950_output.json  README.md
backend/webapp_static/: 404.html  first-contact.html  first-contact.txt  follow-up.html  follow-up.txt  index.html  index.txt
backend/webapp_static/ChatJustus/: 404.html  cases.html  cases.txt  demo-first-contact.html  demo-first-contact.txt  demo-follow-up.html  demo-follow-up.txt  first-contact.html  first-contact.txt  follow-up.html  follow-up.txt  index.html  index.txt  sw.js
backend/webapp_static/_next/static/chunks/: 1-b7589cc29cf2d436.js  1-bf133871cf49b6a8.js  125-2ca88c4a317f8af8.js  125-918a0f1962d3e7fa.js  266-789049cd1b66f34f.js  359-ac35137841ad5ef6.js  387-e7d06374c5b334fa.js  39209d7c-1b626b10e683d4a2.js  39209d7c-9df89ef8df8b5b36.js  39209d7c-cd7581fed40d51ea.js  401-ec37072678abdc9a.js  408-b179437172c9c555.js  408-fde707aedc6e7387.js  409-66ca23718059f620.js  (+28 more)
(+254 files in other folders)
