[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Joong-Won Seo <joong.won.seo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gpt-wrapper = {git = "https://github.com/JoongWonSeo/gpt-wrapper.git"}
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
jsonpatch = "^1.33"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[tool.poetry.scripts]
server = "backend.server.server:start"
server-dev = "backend.server.server:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
