[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Joong-Won Seo <joong.won.seo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gpt-wrapper = {git = "git@github.com:JoongWonSeo/gpt-wrapper.git"}
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
jsonpatch = "^1.33"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
yagmail = "^0.15.293"
markdown = "^3.5.2"


[tool.poetry.scripts]
server = "backend.server.server:start"
expose = "backend.server.server:expose"
expose_no_qr = "backend.server.server:expose_no_qr"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
